# sa-metameta

./: README.md  project.toml  pyproject.toml  requirements.txt  setup.cfg
src/sa_metameta/: __init__.py  exceptions.py
src/sa_metameta/asyncmeta/: __init__.py
src/sa_metameta/meta/: __init__.py
