[metadata]
name = sa-metadata
version = 0.0.1
author = Red Hat, Inc.
author_email = info@ansible.com
url = https://github.com/Red-HAP/sa-metameta
license = Apache-2.0
description = Dynamic SQLAlchemy Metadata Reflection of One or More SQLALchemy Engines

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

python_requires = >=3.9
install_requires =
    sqlalchemy[asyncio] >= 1.4

[options.packages.find]
where = src
