[metadata]
name = sa-metameta
version = 0.0.2
author = Red Hat, Inc.
author_email = info@ansible.com
maintainer = HAP
maintainer_email = hproctor@redhat.com
url = https://github.com/Red-HAP/sa-metameta
project_urls =
    issues=https://github.com/Red-HAP/sa-metameta/issues
    wiki=https://github.com/Red-HAP/sa-metameta/wiki
license = Apache-2.0
license_files =
    LICENSE
description = Dynamic SQLAlchemy Metadata Reflection of One or More SQLALchemy Engines
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    SQLALchemy
    asyncio
    asyncpg
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

python_requires = >=3.9
install_requires =
    sqlalchemy[asyncio] >= 1.4

[options.packages.find]
where = src
